syntax = "proto3";

package api.components;

import "google/protobuf/timestamp.proto";

service ComponentsService {
    // Get single component
    rpc GetComponent (GetComponentRequest) returns (Component) {}

    // Save component
    rpc SaveComponent (SaveComponentRequest) returns (Component) {}

    // Favorite component
    rpc FavoriteComponent (FavoriteComponentRequest) returns (Component) {}

    // Generate component stream
    rpc GenerateComponentStream (GenerateRequest) returns (stream GenerateResponse) {}

    // Update component code
    rpc UpdateComponentCode (UpdateCodeRequest) returns (Component) {}

    // Generate code
    rpc GenerateCode (GenerateCodeRequest) returns (Component) {}
}

message User {
    int32 id = 1;
    string email = 2;
}

message Component {
    int32 id = 1;
    string title = 2;
    string code = 3;
    string e2eTests = 4;
    string unitTests = 5;
    string mdxDocs = 6;
    string tsDocs = 7;
    int32 projectId = 8;
    google.protobuf.Timestamp createdAt = 9;
    google.protobuf.Timestamp updatedAt = 10;
    string projectName = 11;
    int32 userId = 12;
    bool wasE2eTested = 13;
    bool wasUnitTested = 14;
    bool hasMdxDocs = 15;
    bool hasTypescriptDocs = 16;
    bool isFavorite = 17;
}

message GetComponentRequest {
    User user = 1;
    int32 projectId = 2;
    int32 componentId = 3;
}

message SaveComponentRequest {
    User user = 1;
    string title = 2;
    string code = 3;
    int32 projectId = 4;
}

message FavoriteComponentRequest {
    User user = 1;
    int32 projectId = 2;
    int32 componentId = 3;
    bool favoriteValue = 4;
}

message GenerateRequest {
    string prompt = 1;
}

message GenerateResponse {
    string content = 1;
}

message UpdateCodeRequest {
    User user = 1;
    int32 componentId = 2;
    CodeType codeType = 3;
    string content = 4;
}

message GenerateCodeRequest {
    User user = 1;
    int32 componentId = 2;
    CodeType codeType = 3;
}

enum CodeType {
    CODE = 0;
    TYPESCRIPT_DOCS = 1;
    UNIT_TESTS = 2;
    E2E_TESTS = 3;
    MDX_DOCS = 4;
}